Bug 1022421 - Cache value of FaviconHelper::GetICOCacheSecondsTimeout() in AsyncDeleteAllFaviconsFromDisk so that we don't use pref service off main thread. r=jimm