widget/windows/WinUtils.h
@@ -414,6 +414,7 @@ public:
   AsyncDeleteAllFaviconsFromDisk(bool aIgnoreRecent = false);
   virtual ~AsyncDeleteAllFaviconsFromDisk();
 private:
+  int32_t mIcoNoDeleteSeconds;
   bool mIgnoreRecent;
 };
 
